syntax = "proto3";

option go_package = ".;server";

package server;

service AuthService {
    rpc ChangeAuthCache (NewUserInfo) returns (AuthResponse);
}

message NewUserInfo {
    string oldUsername = 1;
    string newUsername = 2;
    string oldEmail = 3;
    string newEmail = 4;
}

message AuthResponse {
    bool success = 1;
}

