syntax = "proto3";

option go_package = ".;server";

package server;

service UserService {
    rpc CheckUser (UserRequest) returns (UserResponse);
    rpc CheckRelation (RelationRequest) returns (RelationResponse);
    rpc ChangeAvatar (AvatarName) returns (AvatarResponse);
}

message UserRequest {
    string ID = 1;
}

message UserResponse {
    bool exits = 1;
    bool active = 2;
}

message RelationRequest {
    string fromID = 1;
    string toID = 2;
}

message RelationResponse {
    bool exits = 1;
}

message AvatarName {
    string Name = 1;
}

message AvatarResponse {
    bool sucess = 1;
}